# itmo-alg-course

./: .gitignore  run.js
c-itmo-alg-course/: .gitignore  CMakeLists.txt
c-itmo-alg-course/resources/Week1Task1/: input.txt
c-itmo-alg-course/resources/Week3Task1/: input.txt  output.txt
c-itmo-alg-course/resources/Week3Task2/: input.txt  output.txt
c-itmo-alg-course/resources/Week4Task4/: output.txt
c-itmo-alg-course/resources/Week4Task5/: input.txt  output.txt
c-itmo-alg-course/resources/Week5Task1/: input.txt
c-itmo-alg-course/resources/Week5Task2/: input.txt  output.txt
c-itmo-alg-course/resources/Week6Task2/: input.txt  output.txt
c-itmo-alg-course/resources/Week7Task4/: input.txt  output.txt
c-itmo-alg-course/resources/Week7Task5/: input.txt
c-itmo-alg-course/resources/Week8Task3/: input.txt
c-itmo-alg-course/src/: w3t1.c  w3t2.c  w4t1.cxx  w4t2.cxx  w4t3.cxx  w4t4.cxx  w4t5.cxx  w4t6.cxx  w5t1.cxx  w5t2.cxx  w6t1.cxx  w6t2.cxx  w6t3.c  w6t4.c  w7t1.c  w7t2.c  w7t3.c  w7t3.cxx  w7t5.cxx  w8t3.cxx
cbased/: CMakeLists.txt
cbased/src/: w1t1.c
resources/Week1Task2/: input.txt
run/: run.js
src/: TaskFive.java  TaskFour.java  TaskOne.java  TaskThree.java  TaskTwo.java  Week1Task1.java  Week1Task2.java  Week1Task3.java  Week1Task4.java  Week1Task5.java  Week2Task1.java  Week2Task1Alt.java  Week2Task2.java  Week2Task3.java  Week2Task4.java  Week2Task4Back.java  Week2Task5.java  Week3Task1.java  Week3Task2.java  Week7Task4.java  Week7Task5.java  Week8Task1.java  Week8Task2.java  Week8Task2Alt.java  Week8Task3.java  Week8Task4.java
(+22 files in other folders)
