cmake_minimum_required(VERSION 3.15)
project(ClionItmo)

set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 14)
add_compile_options(-DJUDGE -O0 -Wl,--stack=67108864)

add_executable(w1t1 src/w1t1.c src/edx-io.c)
add_executable(w3t1 src/w3t1.c src/edx-io.c)
add_executable(w3t2 src/w3t2.c src/edx-io.c)

add_executable(w4t1 src/w4t1.cxx src/edx-io.c src/edx-io.cpp)
add_executable(w4t2 src/w4t2.cxx src/edx-io.c src/edx-io.cpp)
add_executable(w4t3 src/w4t3.cxx src/edx-io.c src/edx-io.cpp)
add_executable(w4t4 src/w4t4.cxx src/edx-io.c src/edx-io.cpp)
add_executable(w4t5 src/w4t5.cxx src/edx-io.c src/edx-io.cpp)
add_executable(w4t6 src/w4t6.cxx src/edx-io.c src/edx-io.cpp)
add_executable(w5t1 src/w5t1.cxx src/edx-io.c src/edx-io.cpp)
add_executable(w5t2 src/w5t2.cxx src/edx-io.c src/edx-io.cpp)
add_executable(w6t1 src/w6t1.cxx src/edx-io.c src/edx-io.cpp)
add_executable(w6t2 src/w6t2.cxx src/edx-io.c src/edx-io.cpp)
add_executable(w6t3 src/w6t3.c src/edx-io.c)
add_executable(w6t4 src/w6t4.c src/edx-io.c)
add_executable(w7t1 src/w7t1.c src/edx-io.c)
add_executable(w7t2 src/w7t2.c src/edx-io.c)